--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -61,7 +61,7 @@
                                         <p class="pf-c-form__helper-text pf-m-primary" id="help-text-form-name-helper" 
                                              style="font-size: 13px;" aria-live="polite"> 
                                             <i class="fas fa-info-circle" style="color: Dodgerblue;"></i> 
-                                            If keyboard shortcut for Paste is not working, use Edit>Paste 
+                                            If a keyboard shortcut for Paste is not available, try using Edit>Paste 
                                         </p>
                                     </div>
                                 </div>
