--- a/src/app/stack/card-details/component-information/component-information.component.html
+++ b/src/app/stack/card-details/component-information/component-information.component.html
@@ -59,7 +59,7 @@
 
                         <div *ngSwitchCase="'cveIdOfH'">
                             <!-- cveIdOfHeighest CVSS -->
-                            <span *ngIf="comp?.hasSecurityIssue && tabType == 'private'" class="wrap-text">
+                            <span *ngIf="comp?.hasSecurityIssue && tabType == 'private'">
                                 <a  [href]="comp?.privateSecurityDetails?.highestIssue?.url" target="_blank" class="name"
                                     [innerText]="comp?.privateSecurityDetails && comp?.privateSecurityDetails?.highestIssue?.cve || '-'"></a>
                                     
@@ -67,12 +67,11 @@
                                     to <br> learn about the vulnerabilities found
                                 </span>
                             </span>
-                            <span class="wrap-text">
-                                <a *ngIf="comp?.hasSecurityIssue && tabType == 'public'" class="name"
-                                    [href]="comp?.publicSecurityDetails?.highestIssue?.url" target="_blank"
-                                    [innerText]="comp?.publicSecurityDetails && comp?.publicSecurityDetails?.highestIssue?.cve || '-'"></a>
-                                <span *ngIf="!comp?.hasSecurityIssue" [innerText]="'-'"></span>
-                            </span>
+                            <a *ngIf="comp?.hasSecurityIssue && tabType == 'public'" class="name"
+                                [href]="comp?.publicSecurityDetails?.highestIssue?.url" target="_blank"
+                                [innerText]="comp?.publicSecurityDetails && comp?.publicSecurityDetails?.highestIssue?.cve || '-'"></a>
+                            <span *ngIf="!comp?.hasSecurityIssue" [innerText]="'-'"></span>
+
                         </div>
 
                         <div *ngSwitchCase="'transCount'">
